cluster/apps/networking/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-dashboard
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "pihole"
    hajimari.io/enable: "pihole"
    hajimari.io/icon: "dns"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "pihole.${SECRET_DOMAIN}"
      secretName: "pihole-dashboard-tls"
  rules:
    - host: "pihole.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
